# aifs-modal-demo

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  pyproject.toml
aifs_modal_demo/: __init__.py  app.py  ingest.py  plot_utils.py  tasks.py  utils.py
figures/: pipeline-arraylake.md  pipeline-with-ingestion.md
notebooks/: 01-download-era5.ipynb  02-era5-tracking.ipynb  03-ingest-ic.ipynb  03-run-aifs-forecast.ipynb  04-aifs-tracking.ipynb  05-track-error.ipynb  heatwave-reforecast-ens.ipynb  heatwave-reforecast.ipynb  ingest.ipynb  jet-stream-free-run.ipynb  run-aifs-modal.ipynb
