[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "aifs-modal-demo"
version = "0.1.0"
description = "Serverless AIFS forecasting in modal."
authors = [{name = "Martí Bosch", email = "marti.bosch@protonmail.com"}]
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/martibosch/aifs-modal-demo"

[tool.codespell]
skip = "pixi.lock,notebooks/*.ipynb"

[tool.mdformat]
number = true

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]

[tool.pixi.dependencies]
ipykernel = ">=7.2.0,<8"
pre-commit = ">=4.4.0,<5"
python = "==3.13"
snakemake = ">=9.13.7,<10"
cartopy = ">=0.25.0,<0.26"
icechunk = ">=1.1.18,<2"
matplotlib = ">=3.10.8,<4"
xarray = ">=2026.1.0,<2027"
zarr = ">=3.1.5,<4"
modal-client = ">=1.3.2,<2"
arraylake = ">=0.28.1,<0.29"

[tool.pixi.pypi-dependencies]
aifs_modal_demo = {path = ".", editable = true}

[tool.pixi.workspace]
authors = ["Martí Bosch marti.bosch@protonmail.com>"]
channels = ["conda-forge", "bioconda"]
name = "aifs-modal-demo"
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
version = "0.1.0"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["aifs_modal_demo"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "aifs_modal_demo"
module-root = ""
