[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "aifs-modal-demo"
version = "0.1.0"
description = "Serverless AIFS forecasting in modal."
authors = [{name = "Martí Bosch", email = "marti.bosch@protonmail.com"}]
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"
dependencies = ["earthkit-regrid>=0.5.1,<0.6", "anemoi-graphs>=0.8.5,<0.9", "anemoi-datasets>=0.4.5,<0.5", "meteora[xvec]==0.13.0"]

[project.urls]
repository = "https://github.com/martibosch/aifs-modal-demo"

[tool.codespell]
skip = "pixi.lock,notebooks/*.ipynb"

[tool.mdformat]
number = true

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]

[tool.pixi.dependencies]
ipykernel = ">=7.2.0,<8"
pre-commit = ">=4.4.0,<5"
python = "==3.12"
cartopy = ">=0.25.0,<0.26"
icechunk = ">=1.1.18,<2"
matplotlib = ">=3.10.8,<4"
xarray = ">=2026.1.0,<2027"
zarr = ">=3.1.5,<4"
modal-client = ">=1.3.2,<2"
earthkit-data = ">=0.19.0,<0.20"
ecmwf-opendata = ">=0.3.26,<0.4"
streamlit = ">=1.44.0,<2"
pillow = ">=11.2.1,<12"
cdsapi = ">=0.7.7,<0.8"
iprogress = ">=0.4,<0.5"
ipywidgets = ">=8.1.8,<9"
seaborn = ">=0.13.2,<0.14"

[tool.pixi.pypi-dependencies]
aifs_modal_demo = {path = ".", editable = true}
gcsfs = ">=2025.12.0"
stationbench = {git = "https://github.com/martibosch/stationbench", rev = "2e933efa9e77b6bd3ef1c03f7300d7be55723462"}

[tool.pixi.workspace]
authors = ["Martí Bosch marti.bosch@protonmail.com>"]
channels = ["conda-forge"]
name = "aifs-modal-demo"
platforms = ["linux-64", "osx-64", "osx-arm64"]
version = "0.1.0"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["aifs_modal_demo"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "aifs_modal_demo"
module-root = ""
