# [build-system]
# requires = ["uv_build>=0.9.4,<0.10.0"]
# build-backend = "uv_build"

[project]
name = "aifs-modal-demo"
version = "0.1.0"
description = "Serverless AIFS storm track predictability demo — Storm Claudia (Nov 2025)."
authors = [{name = "Martí Bosch", email = "marti.bosch@unibe.ch"}]
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/martibosch/aifs-modal-demo"

[tool.codespell]
# ignore generated Jupyter notebook outputs while still checking notebook source
ignore-multiline-regex = '"outputs":\s*\[(?s:.*?)\](?=,\s*"source":\s*\[)'
skip = "pixi.lock"

[tool.pixi.dependencies]
ipykernel = ">=7.1.0,<8"
python = "==3.13"
papermill = ">=2.7.0,<3"
xarray = ">=2026.2.0,<2027"
cdsapi = ">=0.7.7,<0.8"
cartopy = ">=0.25.0,<0.26"
matplotlib = ">=3.10.8,<4"
numpy = ">=2.4.3,<3"
pandas = ">=2.3.3,<3"
jax = ">=0.9.0,<0.10"
icechunk = ">=1.1.21,<2"
snakemake = ">=9.19.0,<10"

[tool.pixi.pypi-dependencies]
# aifs_modal_demo = {path = ".", editable = true}
aifs_modal = {git = "https://github.com/martibosch/aifs-modal"}
pystormtracker = {git = "https://github.com/mwyau/PyStormTracker", tag = "v0.5.0.dev0", extras = ["jax", "netcdf4"]}

[tool.pixi.workspace]
authors = ["Martí Bosch <marti.bosch@unibe.ch>"]
channels = ["conda-forge", "bioconda"]
name = "aifs-modal-demo"
platforms = ["linux-64", "osx-64", "osx-arm64"]
version = "0.1.0"

# [tool.uv.build-backend]
# module-name = "aifs_modal_demo"
# module-root = ""
